--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ p {
     height: 800px;
     width: 100%;
     margin-bottom: 25px;
-    background-image: url("../images/digital-marketing-meeting.jpg");
+    background-image: url("./images/digital-marketing-meeting.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -110,7 +110,17 @@ p {
     color: #ffffff;
 }
 
-h3 {
+.benefit-lead h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit-brand h3 {
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+.benefit-cost h3 {
     margin-bottom: 10px;
     text-align: center;
 }
@@ -151,11 +161,29 @@ h3 {
     color: #ffffff;
 }
 
-img {
+.search-engine-optimization img {
     max-height: 200px;
 }
 
-h2 {
+.online-reputation-management img {
+    max-height: 200px;
+}
+
+.social-media-marketing img {
+    max-height: 200px;
+}
+
+.search-engine-optimization h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.online-reputation-management h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
+}
+
+.social-media-marketing h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
